@@ -34,17 +34,23 @@ public class Summary {
     public void showMonthlySummary(String month, Bank bank, Currency currency, boolean isConvertAll) {
         assert month != null && !month.isBlank() : "Month input cannot be null or empty";
 
-        logger.log(Level.INFO, "Generating summary for month: " + month + ", Currency: " + currency.name() + ", ConvertAll: " + isConvertAll);
+        logger.log(Level.INFO, "Generating summary for month: " + month + ", Currency: " + currency.name()
+                + ", ConvertAll: " + isConvertAll);
 
         Month monthEnum = Month.valueOf(month.toUpperCase());
 
         Currency displayCurrency = determineDisplayCurrency(bank, currency);
         List<Transaction> monthlyTransactions = getMonthlyTransactions(bank, monthEnum, currency, isConvertAll);
 
-        Map<Category, Float> spendingByCategory = calculateSpendingByCategory(monthlyTransactions, displayCurrency, isConvertAll);
-        Map<Category, Float> budgetByCategory = calculateBudgetByCategory(monthEnum, bank, displayCurrency, currency, isConvertAll);
+        Map<Category, Float> spendingByCategory = calculateSpendingByCategory(monthlyTransactions,
+                displayCurrency, isConvertAll);
 
-        String summaryOutput = OutputManager.printSummary(month, monthlyTransactions, spendingByCategory, budgetByCategory, displayCurrency, isConvertAll);
+        Map<Category, Float> budgetByCategory = calculateBudgetByCategory(monthEnum, bank, displayCurrency,
+                currency, isConvertAll);
+
+        String summaryOutput = OutputManager.printSummary(month, monthlyTransactions, spendingByCategory,
+                budgetByCategory, displayCurrency, isConvertAll);
+
         OutputManager.printMessage(summaryOutput);
     }
 
@@ -53,8 +59,9 @@ public class Summary {
         return (bank != null) ? bank.getCurrency() : currency;
     }
 
-    //@@author kevinlokewy
-    private List<Transaction> getMonthlyTransactions(Bank bank, Month monthEnum, Currency currency, boolean isConvertAll) {
+    private List<Transaction> getMonthlyTransactions(
+            Bank bank, Month monthEnum, Currency currency, boolean isConvertAll) {
+
         if (bank != null) {
             return getBankTransactions(bank, monthEnum);
         }
@@ -86,8 +93,9 @@ public class Summary {
         return monthlyTransactions;
     }
 
-    //@@author kevinlokewy
-    private Map<Category, Float> calculateSpendingByCategory(List<Transaction> monthlyTransactions, Currency displayCurrency, boolean isConvertAll) {
+    private Map<Category, Float> calculateSpendingByCategory(
+            List<Transaction> monthlyTransactions, Currency displayCurrency, boolean isConvertAll) {
+
         Map<Category, Float> spendingByCategory = new HashMap<>();
 
         for (Category cat : Category.values()) {
@@ -98,8 +106,8 @@ public class Summary {
         return spendingByCategory;
     }
 
-    //@@author kevinlokewy
-    private float calculateSpendingForCategory(Category category, List<Transaction> monthlyTransactions, Currency displayCurrency, boolean isConvertAll) {
+    private float calculateSpendingForCategory(
+            Category category, List<Transaction> monthlyTransactions, Currency displayCurrency, boolean isConvertAll) {
         float spent = 0f;
 
         for (Transaction t : monthlyTransactions) {
@@ -117,8 +125,8 @@ public class Summary {
         return spent;
     }
 
-    //@@author kevinlokewy
-    private Map<Category, Float> calculateBudgetByCategory(Month monthEnum, Bank bank, Currency displayCurrency, Currency currency, boolean isConvertAll) {
+    private Map<Category, Float> calculateBudgetByCategory(
+            Month monthEnum, Bank bank, Currency displayCurrency, Currency currency, boolean isConvertAll) {
         Map<Category, Float> budgetByCategory = new HashMap<>();
 
         for (Category cat : Category.values()) {
@@ -129,8 +137,8 @@ public class Summary {
         return budgetByCategory;
     }
 
-    //@@author kevinlokewy
-    private float calculateBudgetForCategory(Category category, Month monthEnum, Bank bank, Currency displayCurrency, Currency currency, boolean isConvertAll) {
+    private float calculateBudgetForCategory(Category category, Month monthEnum, Bank bank,
+                                             Currency displayCurrency, Currency currency, boolean isConvertAll) {
         float budget = 0f;
 
         for (Bank b : User.getBanks()) {
@@ -145,8 +153,8 @@ public class Summary {
         return budget;
     }
 
-    //@@author kevinlokewy
-    private float calculateBudgetAmount(Budget bgt, Bank b, Bank bank, Currency displayCurrency, Currency currency, boolean isConvertAll) {
+    private float calculateBudgetAmount(
+            Budget bgt, Bank b, Bank bank, Currency displayCurrency, Currency currency, boolean isConvertAll) {
         if (bank != null) {
             return calculateLoggedInBudget(bgt, b, bank);
         }
@@ -174,7 +182,7 @@ public class Summary {
     private static void getAllTransactions(Bank b, List<Transaction> monthlyTransactions, Month monthEnum) {
         monthlyTransactions.addAll(b.getTransactions().stream()
                 .filter(t -> t.getDate().getMonth() == monthEnum)
-                .collect(Collectors.toList()));
+                .toList());
     }
 
     //@@author kevinlokewy
@@ -186,7 +194,8 @@ public class Summary {
 
     //@@author kevinlokewy
     private static float getTotalSpend(Transaction t, float spent, Currency displayCurrency) {
-        spent += t.getValue() * Currency.getExchangeRateToSGD(t.getCurrency()) / Currency.getExchangeRateToSGD(displayCurrency);
+        spent += t.getValue() * Currency.getExchangeRateToSGD(t.getCurrency())
+                / Currency.getExchangeRateToSGD(displayCurrency);
         return spent;
     }
 
@@ -198,7 +207,8 @@ public class Summary {
 
     //@@author kevinlokewy
     private static float convertBudgets(float budget, Budget bgt, Currency displayCurrency) {
-        budget += bgt.getBudget() * Currency.getExchangeRateToSGD(bgt.getCurrency()) / Currency.getExchangeRateToSGD(displayCurrency);
+        budget += bgt.getBudget() * Currency.getExchangeRateToSGD(bgt.getCurrency())
+                / Currency.getExchangeRateToSGD(displayCurrency);
         return budget;
     }
 }
